JSR310アダプタを標準機能へ取り込み (#37)
* feat: JSR310アダプタの取り込み

* test: JSR310アダプタの取り込み（テストコード）

* style: プロダクトコードのInspection対応

* test: テストコードのInspection対応

* feat: パッケージの修正

* test: inspection対応（AssertThat）

* test: 不要なimportの削除

* style: importがワイルドカードになっていたため修正

* style: instanceofの判定とキャストをパターンマッチングを使用した実装に変更。

* style: インデントの修正

* test: 必要のないpublic、配列を変更

* test: 意図したコンバーターが設定されていることを確認するテストを追加

* feat: Utilクラスのパッケージをconverterに移動

* test: Utilクラスのパッケージをconverterに移動による修正

* test: Utilクラスのパッケージをconverterに移動による修正(パッケージ移動漏れ)

* test: 不要なimportの削除